--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/react-input-autosize": "^2.0.2",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.1",
+    "@types/vfile-message": "^2.0.0",
     "chroma-js": "^2.0.4",
     "classnames": "^2.2.5",
     "highlight.js": "^9.12.0",
@@ -66,15 +67,25 @@
     "prop-types": "^15.6.0",
     "react-ace": "^7.0.5",
     "react-beautiful-dnd": "^13.0.0",
+    "react-dropzone": "^10.2.1",
     "react-focus-on": "^3.4.1",
     "react-input-autosize": "^2.2.2",
     "react-is": "~16.3.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
+    "rehype-raw": "^4.0.1",
+    "rehype-react": "^6.0.0",
+    "rehype-stringify": "^6.0.1",
+    "remark-emoji": "^2.1.0",
+    "remark-highlight.js": "^5.2.0",
+    "remark-parse": "^7.0.2",
+    "remark-rehype": "^7.0.0",
     "resize-observer-polyfill": "^1.5.0",
     "tabbable": "^3.0.0",
     "text-diff": "^1.0.1",
-    "uuid": "^3.1.0"
+    "unified": "^8.4.2",
+    "uuid": "^3.1.0",
+    "vfile": "^4.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
@@ -174,6 +185,7 @@
     "postcss-loader": "^2.0.8",
     "pre-commit": "^1.2.2",
     "prettier": "^1.19.1",
+    "prettier-stylelint": "^0.4.2",
     "prompt": "^1.0.0",
     "prop-types": "^15.6.0",
     "puppeteer": "^2.0.0",
@@ -198,6 +210,7 @@
     "shelljs": "^0.8.1",
     "start-server-and-test": "^1.1.4",
     "style-loader": "^0.19.0",
+    "terser-webpack-plugin": "^2.3.5",
     "typescript": "3.7.2",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.0.1",
