--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-is": "^16.7.1",
+    "@types/react-router-dom": "^5.1.5",
     "@types/resize-observer-browser": "^0.1.3",
     "@types/tabbable": "^3.1.0",
     "@types/uuid": "^8.3.0",
