Turn on stale issue/pr action (#4630)
Turns on the stale issue / PR action. We'll want to validate these and update them before turning it on. The action can be bypassed indefinitely by adding `skip-stale-check` as a label onto the issue or PR.

--- a/.github/workflows/stale_issues.yml
+++ b/.github/workflows/stale_issues.yml
@@ -18,11 +18,10 @@ jobs:
           days-before-close: 7
           stale-issue-label: 'stale-issue'
           close-issue-label: 'stale-issue-closed'
-          exempt-issue-labels: 'bug,skip-stale-check'
+          exempt-issue-labels: 'bug,skip-stale-check,meta'
           stale-pr-label: 'stale-pr'
           close-pr-label: 'stale-pr-closed'
-          exempt-pr-labels: 'skip-stale-check'
+          exempt-pr-labels: 'skip-stale-check,meta'
           operations-per-run: 1000
           remove-stale-when-updated: true
-          debug-only: true
           enable-statistics: true
