[EuiResizeObserver] Remove compatibility fallback (#4709)
* remove fallback

* update docs

* types

* CL

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/react-input-autosize": "^2.2.0",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.2",
+    "@types/resize-observer-browser": "^0.1.5",
     "@types/vfile-message": "^2.0.0",
     "chroma-js": "^2.1.0",
     "classnames": "^2.2.6",
