--- a/package.json
+++ b/package.json
@@ -184,6 +184,7 @@
     "react": "^16.12.0",
     "react-docgen-typescript": "^1.20.5",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
