[EuiCodeBlock] Replace highlight.js with prism.js via refractor (#4638)
* replace highlight.js with prism.js via refractor

* merge fix: file renamed

* group lines

* update tests

* i18n block

* remove regex lookbehind not supported in safari

* CL

* js -> jsx

* token color parity

* update line grouping method

* use jsx language in docs

* reduce newlines

* docs

* docs

* headings

* Update src-docs/src/views/code/code_example.js

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* playground updates

* os newlines

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -53,11 +53,11 @@
     "@types/react-input-autosize": "^2.2.0",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.2",
+    "@types/refractor": "^3.0.0",
     "@types/resize-observer-browser": "^0.1.5",
     "@types/vfile-message": "^2.0.0",
     "chroma-js": "^2.1.0",
     "classnames": "^2.2.6",
-    "highlight.js": "^9.18.5",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.6.0",
@@ -69,11 +69,11 @@
     "react-is": "~16.3.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
+    "refractor": "^3.3.1",
     "rehype-raw": "^5.0.0",
     "rehype-react": "^6.0.0",
     "rehype-stringify": "^8.0.0",
     "remark-emoji": "^2.1.0",
-    "remark-highlight.js": "^6.0.0",
     "remark-parse": "^8.0.3",
     "remark-rehype": "^8.0.0",
     "tabbable": "^3.0.0",
@@ -102,7 +102,6 @@
     "@svgr/plugin-svgo": "^4.0.3",
     "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.5",
-    "@types/highlight.js": "^9.12.4",
     "@types/jest": "^24.0.6",
     "@types/node": "^10.17.5",
     "@types/react": "^16.9.34",
