--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "tabbable": "^3.0.0",
     "text-diff": "^1.0.1",
     "unified": "^9.2.0",
+    "unist-util-visit": "^2.0.3",
     "url-parse": "^1.5.0",
     "uuid": "^8.3.0",
     "vfile": "^4.2.0"
