Update renovate.json (#5101)

--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,7 @@
   "rangeStrategy": "bump",
   "semanticCommits": "disabled",
   "assignAutomerge": true,
+  "major": true,
   "vulnerabilityAlerts": {
     "enabled": false
   },
