--- a/package.json
+++ b/package.json
@@ -104,6 +104,9 @@
     "@elastic/charts": "^34.2.0",
     "@elastic/datemath": "^5.0.3",
     "@elastic/eslint-config-kibana": "^0.15.0",
+    "@emotion/babel-preset-css-prop": "^11.0.0",
+    "@emotion/eslint-plugin": "^11.0.0",
+    "@emotion/react": "^11.1.1",
     "@svgr/core": "5.4.0",
     "@svgr/plugin-svgo": "^4.0.3",
     "@types/classnames": "^2.2.10",
