--- a/package.json
+++ b/package.json
@@ -212,7 +212,7 @@
     "start-server-and-test": "^1.11.3",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^4.1.0",
-    "typescript": "4.0.5",
+    "typescript": "4.1.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
@@ -229,6 +229,6 @@
     "prop-types": "^15.5.0",
     "react": "^16.12",
     "react-dom": "^16.12",
-    "typescript": "^4.0.5"
+    "typescript": "~4.1.3"
   }
 }
