Adding Cypress for browser-based component unit testing (#5042)
* Added Cypress and added an example e2e integration test for EuiFocusTrap as well as a component test example for the same

* cypress.json

* Removed some default cypress files, cleaned up the related configurations

* converting cypress spec to typescript but have some issues

* Add documentation

+ update a few current testing docs to point to new Cypress doc

* newline nit

* bump node version, update docker image

* It is nice to run the things you meant to run

* set a specific OS for CI jobs

* Use modern node version in the deploy docs CI job

* Use the CI docker image in the build_docs job too

* PR feedback

Co-authored-by: Constance Chen <constance.chen.3@gmail.com>
Co-authored-by: Constance <constancecchen@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ test/spec/screenshots/baseline/**/*.png
 test/spec/screenshots/diff/**/*.png
 test/spec/screenshots/screen/**/*.png
 test/failure-screenshots/**/*.png
+cypress/screenshots
+cypress/videos
 
 coverage/
 reports/
