--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,10 +50,11 @@
 
     // Specifies where to find library definitions. When this is explicitly set,
     // it has to include the default location i.e. node_modules/@types
-    "typeRoots": ["node_modules/@types", "src/custom_typings"],
+    "typeRoots": ["node_modules/@types", "src/custom_typings"]
   },
   "include": [
     "./src/**/*",
     "./src-docs/**/*"
-  ]
+  ],
+  "exclude": ["node_modules", "**/*/*.spec.tsx"]
 }
