[Docs] Add ThemeLanguages and new Breakpoints page (#5227)
* Added a ThemeSelector for optionally showing/changing content based on JS or Sass theming language
* Added some theme helper components like alert banners, values table, and example row
* [Manual] Copied the outputs json version of Sass for easier consumption in docs rather that sass-loader
* Rearranging sidenav to promote Theme section and adding “Breakpoints”
* Fixed some routing and notices

--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "test-docker": "node ./scripts/test-docker.js",
     "sync-docs": "node ./scripts/docs-sync.js",
     "build-docs": "cross-env BABEL_MODULES=false cross-env NODE_ENV=production NODE_OPTIONS=--max-old-space-size=4096 webpack --config=src-docs/webpack.config.js",
-    "build": "yarn extract-i18n-strings && node ./scripts/compile-clean.js && node ./scripts/compile-eui.js && node ./scripts/compile-scss.js $npm_package_name",
+    "build": "yarn extract-i18n-strings && node ./scripts/compile-clean.js && node ./scripts/compile-eui.js && yarn compile-scss",
     "build-pack": "yarn build && npm pack",
     "compile-icons": "node ./scripts/compile-icons.js && prettier --write --loglevel=warn \"./src/components/icon/assets/**/*.tsx\"",
+    "compile-scss": "node ./scripts/compile-scss.js $npm_package_name",
     "extract-i18n-strings": "node ./scripts/babel/fetch-i18n-strings",
     "lint": "yarn tsc --noEmit && yarn lint-es && yarn lint-sass",
     "lint-fix": "yarn lint-es-fix",
