--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "rehype-raw": "^5.0.0",
     "rehype-react": "^6.0.0",
     "rehype-stringify": "^8.0.0",
+    "remark-breaks": "^2.0.2",
     "remark-emoji": "^2.1.0",
     "remark-parse": "^8.0.3",
     "remark-rehype": "^8.0.0",
