--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "test-unit": "cross-env NODE_ENV=test jest --config ./scripts/jest/config.json",
     "test-a11y": "node ./scripts/a11y-testing",
     "test-staged": "yarn lint && node scripts/test-staged.js",
-    "test-cypress": "cross-env BABEL_MODULES=false NODE_ENV=cypress_test cypress run-ct",
-    "test-cypress-dev": "cross-env BABEL_MODULES=false NODE_ENV=cypress_test cypress open-ct",
+    "test-cypress": "node ./scripts/cypress",
+    "test-cypress-dev": "node ./scripts/cypress --dev",
     "combine-test-coverage": "sh ./scripts/combine-coverage.sh",
     "start-test-server": "BABEL_MODULES=false NODE_ENV=puppeteer NODE_OPTIONS=--max-old-space-size=4096 webpack-dev-server --config src-docs/webpack.config.js --port 9999",
     "yo-component": "yo ./generator-eui/app/component.js",
@@ -92,7 +92,8 @@
     "unist-util-visit": "^2.0.3",
     "url-parse": "^1.5.3",
     "uuid": "^8.3.0",
-    "vfile": "^4.2.0"
+    "vfile": "^4.2.0",
+    "yargs": "^17.2.1"
   },
   "devDependencies": {
     "@axe-core/puppeteer": "^4.1.1",
