--- a/package.json
+++ b/package.json
@@ -92,8 +92,7 @@
     "unist-util-visit": "^2.0.3",
     "url-parse": "^1.5.3",
     "uuid": "^8.3.0",
-    "vfile": "^4.2.0",
-    "yargs": "^17.2.1"
+    "vfile": "^4.2.0"
   },
   "devDependencies": {
     "@axe-core/puppeteer": "^4.1.1",
@@ -229,6 +228,7 @@
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
+    "yargs": "^17.2.1",
     "yeoman-generator": "^4.12.0",
     "yo": "^3.1.1"
   },
