Upgrade Cypress to latest (#5459)
* Upgrade Cypress to latest

* cleaned up yarn.lock

* Use node16 in PR tests

* Update failing snapshots

- this required rm -rf node_modules to fix

* Update .ci/jobs/elastic+eui+pull-request-test.yml

Co-authored-by: Chandler Prall <chandler.prall@gmail.com>

--- a/.ci/jobs/elastic+eui+pull-request-test.yml
+++ b/.ci/jobs/elastic+eui+pull-request-test.yml
@@ -11,7 +11,7 @@
           #!/usr/local/bin/runbld
           export NVM_DIR="/var/lib/jenkins/.nvm"
           [[ -s "$NVM_DIR/nvm.sh" ]] && . "$NVM_DIR/nvm.sh"
-          NPM_VERSION=10
-          nvm install ${NPM_VERSION}
-          nvm use ${NPM_VERSION} --delete-prefix
+          NODE_VERSION=16.13.1
+          nvm install ${NODE_VERSION}
+          nvm use ${NODE_VERSION} --delete-prefix
           npm run test-docker
