--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "css-loader": "^4.2.2",
     "cssnano": "^4.1.10",
     "cypress": "^9.1.1",
+    "cypress-plugin-tab": "^1.0.5",
     "deasync": "^0.1.20",
     "dedent": "^0.7.0",
     "dts-generator": "^3.0.0",
